WAC-139: Make sure the active menu item has the blue bar below it  visible.

--- a/ckanext/who_afro/assets/css/who-afro.css
+++ b/ckanext/who_afro/assets/css/who-afro.css
@@ -3484,7 +3484,7 @@ div.main.countries {
     }
 
     .masthead .main-navbar ul li.active a {
-        padding-bottom: 47px !important;
+        padding-bottom: 43px !important;
         border-bottom: var(--secondary-who-blue) 4px solid;
         border-radius: 0;
         z-index: 0;
